--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
-    "web-vitals": "^0.2.4"
+    "web-vitals": "^0.2.4",
+    "react-redux": "^7.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -66,6 +67,7 @@
     "@storybook/preset-create-react-app": "^3.2.0",
     "@storybook/react": "^6.3.7",
     "@storybook/testing-react": "^0.0.22",
-    "react-test-renderer": "^17.0.2"
+    "react-test-renderer": "^17.0.2",
+    "@types/react-redux": "^7.1.5"
   }
 }
